--- a/HardRock/Venetian.html
+++ b/HardRock/Venetian.html
@@ -2292,19 +2292,19 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i7.text.html:text/html-->
 <div id="i7">Convierte tu boda en un espectáculo.</div>
 <!--#/#--><!--#i12.text.html:text/html-->
-<div id="i12">¡Disfruta del Rock&Roll en el día de tu boda! En el Hard Rock Hotel Guadalajara.</div>
+<div id="i12">¡Disfruta del Rock&Roll en el día de tu boda! En el Hard Rock Hotel Vallarta.</div>
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/qTJRu73.png"/>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/gxFOXSB.png"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/Eppxbon.png"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/CKsRQTv.png"></dataimg>
+<dataimg id="i5" src="https://i.imgur.com/WzS0qv2.png"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
-<dataimg id="i6" src="https://i.imgur.com/bRAczKr.png"></dataimg>
+<dataimg id="i6" src="https://i.imgur.com/JXMe2EA.png"></dataimg>
 <!--#/#--><!--#i2.i32.slice-image.html:slice-image/html.1-->
-<dataimg id="i32" src="https://i.imgur.com/Y4vw19L.png"></dataimg>
+<dataimg id="i32" src="https://i.imgur.com/yYxGZqu.png"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i14.button.html:button/html-->
@@ -2385,7 +2385,7 @@ var el = document.getElementById('i26');
 
 el.addEventListener('click', function(e){
     /*#i28.i29.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://hrhguadalajara.com/planea-tu-evento/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://es.hrhvallarta.com/bodas.htm'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2402,7 +2402,7 @@ var el = document.getElementById('i33');
 
 el.addEventListener('click', function(e){
     /*#i39.i40.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=http://hrhguadalajara.com/planea-tu-evento/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://es.hrhvallarta.com/bodas.htm'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2419,7 +2419,7 @@ var el = document.getElementById('i35');
 
 el.addEventListener('click', function(e){
     /*#i41.i42.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=Mira lo que he encontrado http://hrhguadalajara.com/planea-tu-evento/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'http://whatsapp.com'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2436,7 +2436,7 @@ var el = document.getElementById('i37');
 
 el.addEventListener('click', function(e){
     /*#i43.i44.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=http://hrhguadalajara.com/planea-tu-evento/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://es.hrhvallarta.com/bodas.htm'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2465,7 +2465,7 @@ name: Convierte tu boda en un espectáculo.; customName: false;
 /*#/#*//*#i7.i8.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i12.text.meta:text/meta*/
-name: ¡Disfruta del Rock&Roll en el día de tu boda! En el Hard Rock Hotel Guadalajara.; customName: false;
+name: ¡Disfruta del Rock&Roll en el día de tu boda! En el Hard Rock Hotel Vallarta.; customName: false;
 /*#/#*//*#i12.i13.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i16.image.meta:image/meta*/
@@ -2477,13 +2477,13 @@ data: /*!*/{"keepAspectRatio":true}/*!*/;
 name: Slice 1;
 customName: ;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: gxFOXSB.png; fileId: ; sourceTypeId: externalUrl;
+name: Eppxbon.png; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
-name: CKsRQTv.png; fileId: ; sourceTypeId: externalUrl;
+name: WzS0qv2.png; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
-name: bRAczKr.png; fileId: ; sourceTypeId: externalUrl;
+name: JXMe2EA.png; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i32.slice-image.meta:slice-image/meta.1*/
-name: Y4vw19L.png; fileId: ; sourceTypeId: externalUrl;
+name: yYxGZqu.png; fileId: ; sourceTypeId: externalUrl;
 customName: false;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
