--- a/HardRock/ZoomExp300x600.html
+++ b/HardRock/ZoomExp300x600.html
@@ -174,7 +174,7 @@ a {text-decoration: none;}
   </ol>
 </div>
 
- <div class="ism_text"> <span class=" ism_text_title ism_text_bold" style="font-family:Trebuchet MS; color:#645546; font-size:22px;  text-decoration: none;">Si casarse es una locura... ¡Que el Hard Rock Hotel sea tu manicomio!</span><br>
+ <div class="ism_text"> <span class=" ism_text_title ism_text_bold" style="font-family:Trebuchet MS; color:#645546; font-size:22px;  text-decoration: none;">Si casarse es una locura... ¡Que el Hard Rock Vallarta sea tu manicomio!</span><br>
 
                    
                    </div>
