--- a/Kitkat/Cube2.html
+++ b/Kitkat/Cube2.html
@@ -1021,7 +1021,7 @@ var el = document.getElementById('i192');
 
 el.addEventListener('click', function(e){
     /*#i210.i211.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://www.nestleprofessional.es/area-profesionales/noticias/kit-katr-ahora-con-extra-de-leche-y-cacao.html'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=Mira lo que he encontrado https://www.nestleprofessional.es/area-profesionales/noticias/kit-katr-ahora-con-extra-de-leche-y-cacao.html'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1049,7 +1049,7 @@ if ('click' === 'click') {
 /* Name: On Click; */
 
 /*#/#*//*#i50.i51.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+
 /*#/#*//*#i5.i58.image.js:image/base/js*/
 
 /*#/#*//*#i188.i189.positioning.js:positioning/base/js.2*/
@@ -1092,7 +1092,7 @@ var el = document.getElementById('i198');
 
 el.addEventListener('click', function(e){
     /*#i216.i217.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://www.nestleprofessional.es/area-profesionales/noticias/kit-katr-ahora-con-extra-de-leche-y-cacao.html'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=Mira lo que he encontrado https://www.nestleprofessional.es/area-profesionales/noticias/kit-katr-ahora-con-extra-de-leche-y-cacao.html'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1120,7 +1120,7 @@ if ('click' === 'click') {
 /* Name: On Click; */
 
 /*#/#*//*#i52.i53.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+
 /*#/#*//*#i6.i181.image.js:image/base/js*/
 
 /*#/#*//*#i181.i182.positioning.js:positioning/base/js.2*/
@@ -1161,7 +1161,7 @@ var el = document.getElementById('i204');
 
 el.addEventListener('click', function(e){
     /*#i222.i223.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://www.nestleprofessional.es/area-profesionales/noticias/kit-katr-ahora-con-extra-de-leche-y-cacao.html'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=Mira lo que he encontrado https://www.nestleprofessional.es/area-profesionales/noticias/kit-katr-ahora-con-extra-de-leche-y-cacao.html'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1189,7 +1189,7 @@ if ('click' === 'click') {
 /* Name: On Click; */
 
 /*#/#*//*#i54.i55.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+
 /*#/#*//*#i183.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
