--- a/Kitkat/Venetian.html
+++ b/Kitkat/Venetian.html
@@ -2397,7 +2397,7 @@ var el = document.getElementById('i34');
 
 el.addEventListener('click', function(e){
     /*#i40.i41.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://api.whatsapp.com/send?phone=+573116273421&text=Hola quiero recibir información.'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=Mira lo que he encontrado https://www.nestleprofessional.es/area-profesionales/noticias/kit-katr-ahora-con-extra-de-leche-y-cacao.html'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
