--- a/Natura/video1.html
+++ b/Natura/video1.html
@@ -266,7 +266,7 @@
     </style>
     <script>
         function openUrl() {
-            window.open("https://www2.chubb.com/mx-es/empresas/tecnologia.aspx");
+            window.open("http://naturesheartterrafertil.com/postre-arroz-y-manzana/");
         }
     </script>
 </head>
@@ -289,7 +289,7 @@
                 ytplayer = new YT.Player('ytplayer', {
                     height: '200',
                     width: '305',
-                    videoId: 'hA6hldpSTF8',
+                    videoId: 'Z0lOrZGDi9s',
                     autoplay: 1,
                     playerVars: {
                         loop: 1,
