--- a/Natura/hover-text-big2.html
+++ b/Natura/hover-text-big2.html
@@ -113,7 +113,7 @@
             <div class="imgBx">
                 <div style="margin-left: 
                 0px; margin-top:0px; cursor: pointer;">
-                <img src="https://i.imgur.com/xpW5xMt.gif"> </a></div>
+                <img src="https://i.imgur.com/seE7RxY.gif"> </a></div>
                 
              
 
