--- a/Famsa/300x600/ZoomExp300x600.html
+++ b/Famsa/300x600/ZoomExp300x600.html
@@ -177,11 +177,11 @@ a {text-decoration: none;}
   </ol>
 </div>
 
- <div class="ism_text"> <span class=" ism_text_title ism_text_bold" style="font-family:Arial; color:#000000; font-size:18px;  text-decoration: none;">¿Quién te da boletos de cine por comprar consumibles?</span><br>
+ <div class="ism_text"> <span class=" ism_text_title ism_text_bold" style="font-family:Arial; color:#000000; font-size:16px;  text-decoration: none;">¿Eres exigente con tu trabajo?. Aquí tienes el mejor laptop de mercado al mejor precio.</span><br>
 
             
                    </div>
-                     <div style=";height:40px;text-align:right ;margin-top:12px; margin-right: 10px;"> <img src="https://i.imgur.com/qMERgaZ.png" style="height:40px; text-decoration: none;">
+                     <div style=";height:40px;text-align:right ;margin-top:-5px; margin-right: 10px;"> <img src="https://i.imgur.com/qMERgaZ.png" style="height:35px; text-decoration: none;">
 
                                        
                    </div>
