--- a/FamsaGeo/Cube2.html
+++ b/FamsaGeo/Cube2.html
@@ -660,7 +660,7 @@ var el = document.getElementById('i106');
 
 el.addEventListener('click', function(e){
     /*#i108.i109.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+   
 /*#/#*/
 });
 
@@ -709,7 +709,7 @@ var el = document.getElementById('i172');
 
 el.addEventListener('click', function(e){
     /*#i174.i175.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'http://www.whatsapp.com'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Aprovecha estas ofertas! Solo acá: https://goo.gl/maps/BWX8uZRX3nw'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -739,7 +739,7 @@ var el = document.getElementById('i8');
 
 el.addEventListener('click', function(e){
     /*#i52.i53.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+  
 /*#/#*/
 });
 
@@ -817,7 +817,7 @@ var el = document.getElementById('i148');
 
 el.addEventListener('click', function(e){
     /*#i156.i157.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'http://www.whatsapp.com'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Aprovecha estas ofertas! Solo acá: https://goo.gl/maps/BWX8uZRX3nw'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -847,7 +847,7 @@ var el = document.getElementById('i19');
 
 el.addEventListener('click', function(e){
     /*#i54.i55.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+   
 /*#/#*/
 });
 
@@ -898,7 +898,7 @@ var el = document.getElementById('i98');
 
 el.addEventListener('click', function(e){
     /*#i100.i101.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+ 
 /*#/#*/
 });
 
@@ -989,7 +989,7 @@ var el = document.getElementById('i168');
 
 el.addEventListener('click', function(e){
     /*#i170.i171.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'http://www.whatsapp.com'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Aprovecha estas ofertas! Solo acá: https://goo.gl/maps/BWX8uZRX3nw'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1006,7 +1006,7 @@ var el = document.getElementById('i180');
 
 el.addEventListener('click', function(e){
     /*#i182.i183.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'http://www.whatsapp.com'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Aprovecha estas ofertas! Solo acá: https://goo.gl/maps/BWX8uZRX3nw'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
