--- a/FamsaGeo/hover-text-big.html
+++ b/FamsaGeo/hover-text-big.html
@@ -103,13 +103,13 @@
 
             <div class="imgBx">
                 
-                <img src="https://i.imgur.com/iR8Y3h1.gif">
+                <img src="https://i.imgur.com/v6KGenZ.gif">
             </div>
 
 
             <div class="details">
                 <div style="margin-left: -30px; margin-top:-60px; cursor: pointer;">
-                <a href="https://goo.gl/maps/w1qyDHLpY8w" target="_blank"  style="color: none; text-decoration: none;"><img src="https://i.imgur.com/Sdcs8nx.png"> </a></div>
+                <a href="https://goo.gl/maps/BWX8uZRX3nw" target="_blank"  style="color: none; text-decoration: none;"><img src="https://i.imgur.com/q9IeptB.png"> </a></div>
 
              
 
