--- a/Puerto de Indias/FadeBig.html
+++ b/Puerto de Indias/FadeBig.html
@@ -57,18 +57,18 @@
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/hkgfmHx.png");
+            background: url("https://i.imgur.com/RhPkZFI.jpg");
             background-size: cover;
         }
 
         .bg.cover-2 {
-            background: url("https://i.imgur.com/Lt9izxQ.png");
+            background: url("https://i.imgur.com/8VWs9qA.jpg");
             background-size: cover;
             
         }
 
         .bg.cover-3 {
-            background: url("https://i.imgur.com/o5QGXNE.png");
+            background: url("https://i.imgur.com/jIl9fzR.jpg");
             background-size: cover;
             
         }
