--- a/Puerto de Indias/Venetian.html
+++ b/Puerto de Indias/Venetian.html
@@ -2164,10 +2164,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i46 { opacity: 1; }
 /*#/#*//*#i46.i47.positioning.css:positioning/base/css.2*/
 #i46 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 150px; height: 40px;
-        -ms-transform: translate(0, 0) translate(88px, 357px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(88px, 357px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(88px, 357px) rotate(0deg);
-        transform: translate(0, 0) translate(88px, 357px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(88px, 353px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(88px, 353px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(88px, 353px) rotate(0deg);
+        transform: translate(0, 0) translate(88px, 353px) rotate(0deg);
 }
 /*#/#*//*#i63.text.css:text/base/css*/
 #i63 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: calibrib; font-size: 26px; color: #4a4949; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
@@ -2313,6 +2313,15 @@ url('fonts/') format('svg');
         -moz-transform: translate(0, 0) translate(223px, 273px) rotate(0deg);
         transform: translate(0, 0) translate(223px, 273px) rotate(0deg);
 }
+/*#/#*//*#i101.image.css:image/base/css*/
+#i101 { opacity: 1; }
+/*#/#*//*#i101.i102.positioning.css:positioning/base/css.2*/
+#i101 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 35px; height: 54px;
+        -ms-transform: translate(0, 0) translate(134px, 386px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(134px, 386px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(134px, 386px) rotate(0deg);
+        transform: translate(0, 0) translate(134px, 386px) rotate(0deg);
+}
 /*#/#*/
 </style>
 <!--#/#--></head>
@@ -2351,6 +2360,8 @@ por favor”</div>
 <!--#/#--><!--#i97.font.html:font/html-->
 <!--#/#--><!--#i99.text.html:text/html-->
 <div id="i99">a pink</div>
+<!--#/#--><!--#i101.image.html:image/html-->
+<img id="i101" src="https://i.imgur.com/0p6NYkv.png"/>
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
@@ -2509,6 +2520,10 @@ if ('click' === 'click') {
 }
 /*#/#*//*#i99.i100.positioning.js:positioning/base/js.2*/
 bmShow('i99');
+/*#/#*//*#i101.image.js:image/base/js*/
+
+/*#/#*//*#i101.i102.positioning.js:positioning/base/js.2*/
+bmShow('i101');
 /*#/#*//*#i9.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
@@ -2585,4 +2600,9 @@ name: Web Font: calibrib; type: font-local; customName: ;
 name: a pink; customName: false;
 /*#/#*//*#i99.i100.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
+/*#/#*//*#i101.image.meta:image/meta*/
+name: 0p6NYkv.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: false;
+/*#/#*//*#i101.i102.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*/--><!--#/#-->
