--- a/Puerto de Indias/Cube2.html
+++ b/Puerto de Indias/Cube2.html
@@ -706,11 +706,7 @@ bmShow('i106');
 /* Name: On Click; */
 var el = document.getElementById('i106');
 
-el.addEventListener('click', function(e){
-    /*#i108.i109.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
+
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
@@ -757,7 +753,7 @@ var el = document.getElementById('i172');
 
 el.addEventListener('click', function(e){
     /*#i174.i175.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'http://www.whatsapp.com'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=Mira lo que he encontrado https://goo.gl/maps/HshgM3tsakq'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -785,11 +781,7 @@ if ('click' === 'click') {
 /* Name: On Click; */
 var el = document.getElementById('i8');
 
-el.addEventListener('click', function(e){
-    /*#i52.i53.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
+
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
@@ -865,7 +857,7 @@ var el = document.getElementById('i148');
 
 el.addEventListener('click', function(e){
     /*#i156.i157.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'http://www.whatsapp.com'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=Mira lo que he encontrado https://goo.gl/maps/HshgM3tsakq'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -893,11 +885,7 @@ if ('click' === 'click') {
 /* Name: On Click; */
 var el = document.getElementById('i19');
 
-el.addEventListener('click', function(e){
-    /*#i54.i55.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
+
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
@@ -1045,7 +1033,7 @@ var el = document.getElementById('i168');
 
 el.addEventListener('click', function(e){
     /*#i170.i171.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'http://www.whatsapp.com'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=Mira lo que he encontrado https://goo.gl/maps/HshgM3tsakq'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
