--- a/Puerto de Indias/Video.html
+++ b/Puerto de Indias/Video.html
@@ -339,7 +339,7 @@
                         <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u= http://www.victoriassecret.mx"  target="block">    
                         <img alt="compartir en facebook" class="facebooki" height="21" src="https://i.imgur.com/mJBNNLr.png" title="compartir en facebook" width="21" /></a>
 
-                            <a class="shared" href="https://plus.google.com/share?url= http://www.victoriassecret.mx" target="block">
+                            <a class="shared" href="whatsapp://send?text=Mira lo que he encontrado https://goo.gl/maps/HshgM3tsakq" target="block">
                             <img alt="compartir en google+" class="googlei" height="21" src="https://i.imgur.com/ObtrzfY.png" title="compartir en google+" width="21" /></a>
 
                             <a class="shared" href="https://twitter.com/home?status= http://www.victoriassecret.mx" target="block">
