--- a/Puerto de Indias/FadeBig.html
+++ b/Puerto de Indias/FadeBig.html
@@ -348,10 +348,10 @@
 <div style="bottom:0px;height: 1px;text-align:left;margin-top:-5px">
                 <div id="botones-para-compartir" style="display:inline;float:left;margin-left:4px;margin-top:0px;">
                     <span>  
-                        <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u= https://goo.gl/maps/HshgM3tsakq"  target="block">    
+                        <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://goo.gl/maps/HshgM3tsakq"  target="block">    
                         <img alt="compartir en facebook" class="facebooki" height="21" src="https://i.imgur.com/mJBNNLr.png" title="compartir en facebook" width="21" /></a>
 
-                            <a class="shared" href="https://plus.google.com/share?url= http://www.victoriassecret.mx" target="block">
+                            <a class="shared" href="whatsapp://send?text=Mira lo que he encontrado https://goo.gl/maps/HshgM3tsakq" target="block">
                             <img alt="compartir en google+" class="googlei" height="21" src="https://i.imgur.com/ObtrzfY.png" title="compartir en google+" width="21" /></a>
 
                             <a class="shared" href="https://twitter.com/home?status=https://goo.gl/maps/HshgM3tsakq" target="block">
