--- a/Puerto de Indias/Cube.html
+++ b/Puerto de Indias/Cube.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <head>
+<meta charset="UTF-8">
+
 <title>HTML5 STUDIO BUILDER: 3D Box v 1.5</title>
 
 <!-- Adform API Script -->
@@ -708,6 +710,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(81px, 181px) rotate(0deg);
         transform: translate(0, 0) translate(81px, 181px) rotate(0deg);
 }
+/*#/#*//*#i5.i247.image.css:image/base/css*/
+#i247 { opacity: 1; }
+/*#/#*//*#i247.i248.positioning.css:positioning/base/css.2*/
+#i247 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 40px; height: 62px;
+        -ms-transform: translate(0, 0) translate(129px, 68px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(129px, 68px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(129px, 68px) rotate(0deg);
+        transform: translate(0, 0) translate(129px, 68px) rotate(0deg);
+}
 /*#/#*//*#i52.i53.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i5 { cursor: pointer; }
 /*#/#*//*#i6.i40.shape.css:shape/base/css*/
@@ -789,6 +800,8 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <img id="i236" src="https://i.imgur.com/UhmS6ks.png"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
+<!--#/#--><!--#i5.i247.image.html:image/html-->
+<img id="i247" src="https://i.imgur.com/0p6NYkv.png"/>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i2.i6.cube-panel.html:cube-panel/html-->
@@ -884,6 +897,10 @@ document.getElementById('i95').addEventListener('click', function(e){
     window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://goo.gl/maps/HshgM3tsakq'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
+/*#/#*//*#i5.i247.image.js:image/base/js*/
+
+/*#/#*//*#i247.i248.positioning.js:positioning/base/js.2*/
+bmShow('i247');
 /*#/#*//*#i5.i52.actions.js:actions/base/js*/
 /* Name: On Click; */
 
@@ -985,6 +1002,11 @@ data: /*!*/{"keepAspectRatio":true}/*!*/;
 name: Link;
 /*#/#*//*#i95.i96.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
+/*#/#*//*#i5.i247.image.meta:image/meta*/
+name: 0p6NYkv.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: false;
+/*#/#*//*#i247.i248.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i2.i6.cube-panel.meta:cube-panel/meta*/
     name: Cube Panel 3;
 /*#/#*//*#i6.i40.shape.meta:shape/meta*/
