--- a/Puerto de Indias/Cube2.html
+++ b/Puerto de Indias/Cube2.html
@@ -633,7 +633,7 @@ url('fonts/') format('svg');
     <!--#i41.i42.shape.html:shape/html-->
 <div id="i42"></div>
 <!--#/#--><!--#i41.i80.text.html:text/html-->
-<div id="i80">Fell like sharing?, right next to you, in Rácket !!</div>
+<div id="i80">Feel like sharing?, right next to you, in Rácket !!</div>
 <!--#/#--><!--#i41.i94.image.html:image/html-->
 <img id="i94" src="https://i.imgur.com/pu1eOth.jpg"/>
 <!--#/#--><!--#i41.i184.image.html:image/html-->
