--- a/Puerto de Indias/Cube2.html
+++ b/Puerto de Indias/Cube2.html
@@ -256,7 +256,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i8.i192.text.css:text/base/css*/
 #i192 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: calibri; font-size: 17px; color: #ff477e; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i192.i193.positioning.css:positioning/base/css.2*/
-#i192 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 133px; height: 24px;
+#i192 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 46px; height: 24px;
         -ms-transform: translate(0, 0) translate(155px, 182px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(155px, 182px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(155px, 182px) rotate(0deg);
@@ -633,7 +633,7 @@ url('fonts/') format('svg');
     <!--#i41.i42.shape.html:shape/html-->
 <div id="i42"></div>
 <!--#/#--><!--#i41.i80.text.html:text/html-->
-<div id="i80">Feel like sharing?, right next to you, in Rácket !!</div>
+<div id="i80">Fell like sharing?, right next to you, in Rácket !!</div>
 <!--#/#--><!--#i41.i94.image.html:image/html-->
 <img id="i94" src="https://i.imgur.com/pu1eOth.jpg"/>
 <!--#/#--><!--#i41.i184.image.html:image/html-->
@@ -705,7 +705,6 @@ bmShow('i106');
 /*#/#*//*#i106.i108.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i106');
-
 
 
 if ('click' === 'click') {
@@ -780,7 +779,6 @@ if ('click' === 'click') {
 /*#/#*//*#i8.i52.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i8');
-
 
 
 if ('click' === 'click') {
