--- a/Puerto de Indias/Cube2.html
+++ b/Puerto de Indias/Cube2.html
@@ -247,20 +247,20 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i8.i76.text.css:text/base/css*/
 #i76 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: calibri; font-size: 17px; color: #363535; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i76.i77.positioning.css:positioning/base/css.2*/
-#i76 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 251px; height: 55px;
-        -ms-transform: translate(0, 0) translate(16px, 184px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(16px, 184px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(16px, 184px) rotate(0deg);
-        transform: translate(0, 0) translate(16px, 184px) rotate(0deg);
+#i76 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 220px; height: 55px;
+        -ms-transform: translate(0, 0) translate(35px, 182px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(35px, 182px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(35px, 182px) rotate(0deg);
+        transform: translate(0, 0) translate(35px, 182px) rotate(0deg);
 }
 /*#/#*//*#i8.i192.text.css:text/base/css*/
-#i192 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: calibri; font-size: 17px; color: #ff477e; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i192 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: calibri; font-size: 18px; color: #ff477e; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i192.i193.positioning.css:positioning/base/css.2*/
 #i192 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 46px; height: 24px;
-        -ms-transform: translate(0, 0) translate(155px, 182px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(155px, 182px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(155px, 182px) rotate(0deg);
-        transform: translate(0, 0) translate(155px, 182px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(186px, 181px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(186px, 181px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(186px, 181px) rotate(0deg);
+        transform: translate(0, 0) translate(186px, 181px) rotate(0deg);
 }
 /*#/#*//*#i8.i152.image.css:image/base/css*/
 #i152 { opacity: 1; }
@@ -886,6 +886,7 @@ if ('click' === 'click') {
 var el = document.getElementById('i19');
 
 
+
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
@@ -1220,7 +1221,7 @@ name: Background;
 /*#/#*//*#i42.i43.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i41.i80.text.meta:text/meta*/
-name: Fell like sharing?, right next to you, in Rácket !!; customName: false;
+name: Feel like sharing?, right next to you, in Rácket !!; customName: false;
 /*#/#*//*#i80.i81.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i41.i94.image.meta:image/meta*/
