--- a/Puerto de Indias/Video.html
+++ b/Puerto de Indias/Video.html
@@ -9,10 +9,17 @@
     <title>320x480 - Argeta</title>
     <link href="https://fonts.googleapis.com/css?family=Calibri;" rel="stylesheet">
     <style>
+
+    @font-face {
+  font-family: 'Anglecia-Pro-Title-W01-Bold_1';
+  src: local('Anglecia-Pro-Title-W01-Bold_1'),
+       url(Anglecia-Pro-Title-W01-Bold_1.woff) format('woff');
+}
+
         body.videonew {
             background-color: #FFFFFF;
             color: black;
-            font-family: 'Calibri';
+            font-family: 'Anglecia-Pro-Title-W01-Bold_1';
             margin: 0;
             padding: 0;
         }
@@ -116,16 +123,17 @@
             left: 5px;
             width: 98%;
             line-height: 1.1em;
-            color: #453936;
+            color: #575656;
             text-align: center;
+            font-family: 'Anglecia-Pro-Title-W01-Bold_1';
         }
 
         .videonew_text_title {
             font-size: 115%;
-            color: #453936;
+            color: #575656;
             display: inline-block;
             width: 90%;
-           
+           font-family: 'Anglecia-Pro-Title-W01-Bold_1';
             text-align:center;
                     }
 
@@ -144,6 +152,7 @@
         .videonew_text_small {
             font-size:120%;
             margin-top: 30px;
+            font-family: 'Anglecia-Pro-Title-W01-Bold_1';
         }
 
         ul {
