--- a/Oster/Cube2.html
+++ b/Oster/Cube2.html
@@ -593,7 +593,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i8.i88.image.html:image/html-->
 <img id="i88" src="https://i.imgur.com/h23KF8O.png"/>
 <!--#/#--><!--#i8.i76.text.html:text/html-->
-<div id="i76">Dede el 1 de Marzo al 15 de Mayo, ¡gana con Oster!</div>
+<div id="i76">Desde el 1 de Marzo al 15 de Mayo: ¡Gana con Oster!</div>
 <!--#/#--><!--#i8.i152.image.html:image/html-->
 <img id="i152" src="https://i.imgur.com/qUdbF9i.png"/>
 <!--#/#--><!--#i8.i102.shape.html:shape/html-->
@@ -638,7 +638,7 @@ url('fonts/') format('svg');
 <img id="i140" src="https://i.imgur.com/h23KF8O.png"/>
 <!--#/#--><!--#i30.i142.text.html:text/html-->
 <div id="i142">Mamá siempre gana. 
-¡Y tu ganas con Oster!</div>
+¡Y tú ganas con Oster!</div>
 <!--#/#--><!--#i30.i148.image.html:image/html-->
 <img id="i148" src="https://i.imgur.com/qUdbF9i.png"/>
 <!--#/#--><!--#i30.i98.shape.html:shape/html-->
@@ -731,7 +731,7 @@ var el = document.getElementById('i102');
 
 el.addEventListener('click', function(e){
     /*#i104.i105.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+ 
 /*#/#*/
 });
 
@@ -765,7 +765,7 @@ var el = document.getElementById('i170');
 
 el.addEventListener('click', function(e){
     /*#i192.i193.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://whatsapp.com'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=Mira cómo sorprender a mamá https://www.oster.com.mx/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -795,7 +795,7 @@ var el = document.getElementById('i8');
 
 el.addEventListener('click', function(e){
     /*#i52.i53.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+    
 /*#/#*/
 });
 
@@ -826,7 +826,7 @@ var el = document.getElementById('i122');
 
 el.addEventListener('click', function(e){
     /*#i124.i125.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+  
 /*#/#*/
 });
 
@@ -860,7 +860,7 @@ var el = document.getElementById('i168');
 
 el.addEventListener('click', function(e){
     /*#i186.i187.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://whatsapp.com'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=Mira cómo sorprender a mamá https://www.oster.com.mx/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -890,7 +890,7 @@ var el = document.getElementById('i19');
 
 el.addEventListener('click', function(e){
     /*#i54.i55.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+   
 /*#/#*/
 });
 
@@ -955,7 +955,7 @@ var el = document.getElementById('i166');
 
 el.addEventListener('click', function(e){
     /*#i180.i181.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://whatsapp.com'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=Mira cómo sorprender a mamá https://www.oster.com.mx/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1067,7 +1067,7 @@ var el = document.getElementById('i158');
 
 el.addEventListener('click', function(e){
     /*#i198.i199.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://whatsapp.com'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=Mira cómo sorprender a mamá https://www.oster.com.mx/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
