--- a/Puerto de Indias/Video.html
+++ b/Puerto de Indias/Video.html
@@ -338,7 +338,7 @@
            
         <div class="videonew_text"> 
             <span class="videonew_text_title videonew_text_bold">
-               Where to GIN different?, right here, right now!!
+               Ask for  <span style="color: #eb9baf;">“a Pink Puerto and tonic, por favor”</span>
             </span>
            
 
